--- a/project20.html
+++ b/project20.html
@@ -177,6 +177,8 @@
     <a href="cv.html">CV</a>
   </nav>
 
+
+  
   <main>
     <h1>🎞️ Motion Graphics and 3D animation</h1>
     <p class="description">
@@ -186,7 +188,8 @@
 
 
    <div class="video-alert">
-  <strong>Note:</strong> Archive.org videos do not replay automatically. When a video ends, <b>click inside the video area</b> to watch it again.
+  <strong>Note:</strong> Archive.org videos do not replay automatically. When a video ends, <b>click inside the video area</b> to watch it again.<br>
+  <strong>Audio:</strong> These videos cannot be muted automatically. Please <b>mute the video manually</b> if you do not want sound.
 </div>
 
  <section class="gallery" aria-label="Motion Graphics Gallery">
