--- a/project5.html
+++ b/project5.html
@@ -178,6 +178,8 @@
   <a href="cv.html">CV</a>
 </nav>
 
+
+
 <main>
   <h1>🎬 Video @ personal projects</h1>
   <p class="description">A compilation of videos I created while traveling and attending various events, where 
@@ -185,7 +187,8 @@
     These personal projects reflect my passion for capturing moments and exploring creative video production.
   </p>
   <div class="video-alert">
-  <strong>Note:</strong> Archive.org videos do not replay automatically. When a video ends, <b>click inside the video area</b> to watch it again.
+  <strong>Note:</strong> Archive.org videos do not replay automatically. When a video ends, <b>click inside the video area</b> to watch it again.<br>
+  <strong>Audio:</strong> These videos cannot be muted automatically. Please <b>mute the video manually</b> if you do not want sound.
 </div>
 
  <section class="gallery" aria-label="Motion Graphics Gallery">
