--- a/project2.html
+++ b/project2.html
@@ -188,7 +188,8 @@
   </p>
 
 <div class="video-alert">
-  <strong>Note:</strong> Archive.org videos do not replay automatically. When a video ends, <b>click inside the video area</b> to watch it again.
+  <strong>Note:</strong> Archive.org videos do not replay automatically. When a video ends, <b>click inside the video area</b> to watch it again.<br>
+  <strong>Audio:</strong> These videos cannot be muted automatically. Please <b>mute the video manually</b> if you do not want sound.
 </div>
 
   <section class="gallery" aria-label="Motion Graphics Gallery">
