Atualiza alerta de vídeo com informação sobre mute

--- a/project17.html
+++ b/project17.html
@@ -171,7 +171,7 @@
 </nav>
 
 <main>
-  <h1>🌍 Wandered Spaces – A Landscape & Place Photography Series</h1>
+  <h1>Wandered Spaces – A Landscape & Place Photography Series</h1>
   <p class="description">"Wandered Spaces" is an ongoing photography series that captures the emotional resonance of places — from forgotten alleyways and modern urban structures to vast natural landscapes. Rather than focusing solely on grand vistas, this project explores how space, light, and composition can tell stories. Whether it's a quiet shoreline at dawn or the geometric rhythm of city architecture, each image seeks to evoke a sense of presence and memory, inviting viewers to pause and imagine the unseen narratives of the environment.</p>
 
   <section class="gallery" aria-label="Motion Graphics Gallery">
