--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       transition: background 0.3s, color 0.3s;
     }
     a { text-decoration: none; color: inherit; }
+
     nav {
       position: fixed;
       top: 20px;
@@ -29,7 +30,13 @@
       font-weight: 600;
       display: flex;
       gap: 30px;
+      align-items: center;
       transition: background 0.3s, color 0.3s;
+    }
+    .menu-links {
+      display: flex;
+      gap: 30px;
+      align-items: center;
     }
     nav a {
       font-size: 1rem;
@@ -44,6 +51,24 @@
     nav a.active {
       background-color: #000;
       color: #fff;
+    }
+    .dark-toggle {
+      position: fixed;
+      top: 20px;
+      left: 30px;
+      background: #111;
+      color: #fff;
+      border: none;
+      padding: 8px 16px;
+      border-radius: 30px;
+      font-size: 0.9rem;
+      cursor: pointer;
+      z-index: 1100;
+      transition: background 0.3s, color 0.3s;
+    }
+    .dark-mode .dark-toggle {
+      background: #eee;
+      color: #111;
     }
     .container {
       max-width: 960px;
@@ -71,6 +96,7 @@
       user-select: none;
       pointer-events: none;
       letter-spacing: 0.15em;
+      z-index: 900;
     }
     ul.work-list {
       list-style: none;
@@ -98,6 +124,8 @@
       font-size: 3.5rem;
       color: #f0f0f0;
       font-weight: 700;
+      z-index: 1;
+      transition: left 0.3s, font-size 0.3s;
     }
     .work-text {
       flex: 1 1 300px;
@@ -128,32 +156,24 @@
     .work-image:hover img {
       transform: scale(1.05);
     }
-
-
-
-.portfolio-image {
-  flex: 1 1 400px;
-  max-width: 500px;
-  aspect-ratio: 4 / 3; /* ou 16 / 9, conforme o resto do site */
-  overflow: hidden;
-  border-radius: 12px;
-  box-shadow: 0 10px 40px rgba(0,0,0,0.12);
-}
-.portfolio-image iframe,
-.portfolio-image img,
-.portfolio-image video {
-  width: 100%;
-  height: 100%;
-  display: block;
-  border: none;
-  border-radius: 12px;
-  object-fit: cover;
-}
-
-
-
-
-
+    .portfolio-image {
+      flex: 1 1 400px;
+      max-width: 500px;
+      aspect-ratio: 4 / 3;
+      overflow: hidden;
+      border-radius: 12px;
+      box-shadow: 0 10px 40px rgba(0,0,0,0.12);
+    }
+    .portfolio-image iframe,
+    .portfolio-image img,
+    .portfolio-image video {
+      width: 100%;
+      height: 100%;
+      display: block;
+      border: none;
+      border-radius: 12px;
+      object-fit: cover;
+    }
     footer {
       text-align: center;
       padding: 40px 20px;
@@ -173,94 +193,140 @@
       background: #121212;
       color: #f0f0f0;
     }
-
     .dark-mode nav {
       background: rgba(30, 30, 30, 0.85);
     }
-
     .dark-mode nav a {
       color: #ccc;
     }
-
     .dark-mode nav a:hover,
     .dark-mode nav a.active {
       background-color: #f0f0f0;
       color: #000;
     }
-
     .dark-mode .intro,
     .dark-mode .work-text p {
       color: #ddd;
     }
-
     .dark-mode .work-item::before {
       color: #2e2e2e;
     }
-
     .dark-mode .fixed-index {
       color: #2e2e2e;
     }
-
     .dark-mode .social-links a {
       color: #ccc;
     }
-
     .dark-mode footer {
       color: #aaa;
     }
-
-    .dark-toggle {
-      position: fixed;
-      top: 20px;
-      left: 30px;
-      background: #111;
-      color: #fff;
-      border: none;
-      padding: 8px 16px;
-      border-radius: 30px;
-      font-size: 0.9rem;
-      cursor: pointer;
-      z-index: 1001;
-      transition: background 0.3s, color 0.3s;
-    }
-
-    .dark-mode .dark-toggle {
-      background: #eee;
-      color: #111;
-    }
-
     .video-alert {
-  display: inline-block;
-  background: #ffe08a;
-  color: #a67c00;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 600;
-  border-radius: 25px;
-  padding: 12px 28px;
-  margin: 0 auto 32px auto;
-  font-size: 1.05rem;
-  box-shadow: 0 4px 16px rgba(0,0,0,0.08);
-  text-align: center;
-  letter-spacing: 0.02em;
-  border: none;
-}
+      display: inline-block;
+      background: #ffe08a;
+      color: #a67c00;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 600;
+      border-radius: 25px;
+      padding: 12px 28px;
+      margin: 0 auto 32px auto;
+      font-size: 1.05rem;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+      text-align: center;
+      letter-spacing: 0.02em;
+      border: none;
+    }
+    .dark-mode .video-alert {
+      background: #333019;
+      color: #ffe08a;
+    }
 
-.dark-mode .video-alert {
-  background: #333019;
-  color: #ffe08a;
+    /* --- RESPONSIVE --- */
+    @media (max-width: 600px) {
+      nav {
+        position: static;
+        margin: 0 auto;
+        top: auto;
+        right: auto;
+        left: auto;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+        padding: 6px 0;
+        border-radius: 18px;
+        flex-direction: column;
+        align-items: stretch;
+        width: 100vw;
+        max-width: 100vw;
+        gap: 0;
+      }
+      .menu-links {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 0;
+        width: 100vw;
+        max-width: 100vw;
+      }
+      nav a {
+        font-size: 1rem;
+        padding: 10px 0;
+        flex: 1 1 0;
+        text-align: center;
+        border-radius: 0;
+        background: none;
+      }
+      .dark-toggle {
+        position: static;
+        margin: 10px auto 0 auto;
+        display: block;
+        left: auto;
+        top: auto;
+        font-size: 0.95rem;
+        z-index: 1001;
+      }
+      .container {
+        padding: 70px 3vw 30px;
+        margin-top: 0;
+      }
+      .intro { font-size: 1rem; }
+      .work-text h2 { font-size: 1.1rem; }
+      .work-image, .portfolio-image {
+        max-width: 100vw;
+        border-radius: 8px;
+      }
+      li.work-item {
+        flex-direction: column !important;
+        gap: 12px;
+      }
+      li.work-item::before {
+        position: static;
+        display: block;
+        margin-bottom: 8px;
+        left: 0;
+        font-size: 1.2rem;
+        text-align: left;
+      }
+      @media (max-width: 600px) {
+  nav a.active {
+    background: #fff;
+    color: #000;
+    border-radius: 16px; /* Ou o valor de arredondamento que preferires */
+    box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+    /* Opcional: aumenta o contraste do ativo */
+  }
 }
-
+    }
   </style>
 </head>
 <body>
 
-<!-- Dark Mode Toggle Button -->
 <button class="dark-toggle" onclick="toggleDarkMode()">🌓 Mode</button>
 
 <nav>
-  <a href="index.html" class="active" aria-current="page">Home</a>
-  <a href="portfolio.html">Portfolio</a>
-  <a href="cv.html">Resume</a>
+  <div class="menu-links">
+    <a href="index.html" class="active" aria-current="page">Home</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="cv.html">Resume</a>
+  </div>
 </nav>
 
 <div class="fixed-index" id="fixedIndex">01</div>
@@ -271,9 +337,9 @@
   </div>
 
   <div class="video-alert">
-  <strong>Note:</strong> Archive.org videos do not replay automatically. When a video ends, <b>click inside the video area</b> to watch it again.<br>
-  <strong>Audio:</strong> These videos cannot be muted automatically. Please <b>mute the video manually</b> if you do not want sound.
-</div>
+    <strong>Note:</strong> Archive.org videos do not replay automatically. When a video ends, <b>click inside the video area</b> to watch it again.<br>
+    <strong>Audio:</strong> These videos cannot be muted automatically. Please <b>mute the video manually</b> if you do not want sound.
+  </div>
 
   <ul class="work-list" id="workList">
     <li class="work-item">
@@ -323,7 +389,7 @@
         <p>This project is an exploration of light, contrast, and emotion, stripped of color to focus purely on form and feeling.</p>
       </div>
       <div class="work-image">
-        <img src="project19\IMG_7432.jpg" alt="Bootcamp project" />
+        <img src="project19/IMG_7432.jpg" alt="Bootcamp project" />
       </a>
       </div>
     </li>
