--- a/portfolio.html
+++ b/portfolio.html
@@ -404,6 +404,65 @@
     margin-top: 0;
   }
 }
+
+@media (max-width: 600px) {
+  .mobile-menu-actions {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    width: 100vw;
+    max-width: 100vw;
+    margin: 10px 0 0 0;
+  }
+  .mobile-menu-actions .dark-toggle,
+  .mobile-menu-actions .sort-btn {
+    position: static !important;
+    width: auto;              /* <-- largura automática, igual à do CV */
+    min-width: 0;             /* <-- remove min-width */
+    max-width: 95vw;
+    font-size: 0.95rem;       /* igual à CV */
+    padding: 8px 16px;        /* igual à CV */
+    margin: 0 auto 0 auto;
+    border-radius: 30px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background 0.3s, color 0.3s;
+  }
+  nav {
+    position: static;
+    margin: 22px auto 10px auto; /* MAIS ESPAÇO entre botões e menu */
+    top: auto;
+    right: auto;
+    left: auto;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+    padding: 6px 0;
+    border-radius: 18px;
+    flex-direction: column;
+    align-items: stretch;
+    width: 100vw;
+    max-width: 100vw;
+    gap: 0;
+  }
+  .menu-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 0;
+    width: 100vw;
+    max-width: 100vw;
+  }
+  nav a {
+    font-size: 1rem;
+    padding: 10px 0;
+    flex: 1 1 0;
+    text-align: center;
+    border-radius: 0;
+    background: none;
+  }
+}
+
   </style>
 </head>
 <body>
